--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,6 @@
     ],
     "editor.tabSize": 2,
     "editor.fontFamily": "Menlo, Monaco, 'Courier New', monospace",
+    "favorites.sortDirection": "ASC",
+    "favorites.groupsFirst": true,
 }
