--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,6 @@
     "python.linting.pep8Enabled": false,
     "python.linting.flake8Enabled": true,
     "editor.wordWrapColumn": 120,
-    "workbench.colorTheme": "★★★★★ NORD DARK ★★★★★",
+    "workbench.colorTheme": "Nord",
 
 }
